# angent_contitucional_RAG

./: .gitattributes  .gitignore  README.md  api.py  dashboard.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_all_agents.py  test_constitutional_agent.py  test_consumer_agent.py  test_conversational_memory.py  test_human_rights_agent.py  test_web_fallback.py
cache/: cache_manager.py
cache/cache/embeddings/: cache.db
chroma_db/: chroma.sqlite3
chroma_db/24073835-93ed-4a71-9b99-9a12eeb858dc/: index_metadata.pickle
chroma_db/2954b0d2-25f2-4676-86ca-b7fff73468d1/: index_metadata.pickle
chroma_db/32fcb9f4-5b0c-4a46-a5ab-2db2f9e9b3fb/: index_metadata.pickle
chroma_db/8f4b982e-837e-49b6-9599-7ab05d950bad/: index_metadata.pickle
chroma_db/aa3f5578-e905-46af-8fda-03ec0499e3b4/: index_metadata.pickle
chroma_db/d22c650b-1cf5-46d9-a67f-29ca0bc7e1df/: index_metadata.pickle
chroma_db/df292884-8940-4b1a-9e87-160c4b476aab/: index_metadata.pickle
chroma_db_constitucional/: chroma.sqlite3
data/processed/: constitution.jsonl
frontend/app/: page.tsx
rag-juridico/: main.py  pyproject.toml
scripts/: process_documents.py  test_router.py  use_rag_system.py
src/: multi_agent_manager.py
src/agents/: agent_constitucional.py  agent_workflow.py  base_legal_agent.py  constitutional_agent.py  consumer_agent.py  human_rights_agent.py  router_agent.py
src/config/: setting.py
src/parsers/: parse_constitution.py
src/pipelines/: document_processor.py  embed_constitution.py  hybrid_retriever_ponderado.py  hybrid_wrapper.py  pinecone_retriever.py  pinecone_upsert_rastreado.py  rag_bm25.py  rag_hybrid.py  rag_retriever.py  register_sources.py  specialized_retrievers.py
src/utils/: carrega_constituicao.py  cross_encoder_reranker.py  interaction_logger.py  llm_utils.py  logger.py  rrf_retriever.py  web_search_tool.py  weighted_hybrid.py
tests/: debug.py  fix_domain_detection.py  setup_project.py  test_benchmark.py  test_diagnostic.py  test_setup.py  test_system_flow.py
tests/chroma_db/: chroma.sqlite3
