[project]
name = "agent_constitucional_RAG-MAIN"
version = "0.0.1"
description = "agent_constitucional_RAG-MAIN"
readme = "README.md"
license = "MIT"
authors = [{ name = "Andrey Lopes" }]
requires-python = ">=3.13"
dependencies = [ # Lista consolidada para resolver conflitos
    # LangChain Core
    "langchain-core>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langchain-pinecone>=0.1.0",
    "langchain>=1.0.0",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.2",
    # LLM & Vector
    "openai>=1.0.0",
    "tiktoken",
    "pinecone>=6.0.0",
    "chromadb>=1.3.2",
    "rank-bm25>=0.2.2",
    # Document Processing
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.7",
    "beautifulsoup4>=4.14.2",
    "pypdf2>=3.0.1",
    "pdf2image>=1.17.0", # Dependência para OCR
    "pytesseract", # Dependência para OCR
    # Utilities
    "python-dotenv>=1.2.1",
    "rich>=14.1.0",
    "pydantic>=2.12.3",
    "tqdm>=4.67.1",
    "diskcache>=5.6.3",
    "sentence-transformers>=5.1.2",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "streamlit>=1.51.0",
    "pandas>=2.3.3",
]

[project.urls]
Homepage = "https://www.perceptonIA.com.br/"

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = [".venv"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "T201",   # Checks for print statements, 
  "COM812", # Checks for the absence of trailing commas.
  "INP001", # Checks for packages that are missing an __init__.py file.
  "D",      # All pydocstyle (D)
  "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
  "ERA001", # Checks for commented-out Python code.
  "A004",   # Shadowing Python Builtin
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["agent_constitucional_RAG-MAIN"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
